[tool.poetry]
name = "django_bitgo"
version = "0.1.0"
description = "Django app for bitGo"
authors = ["panosangelopoulos <panos.angelopoulos@outlook.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.1"
requests = "^2.28.1"
black = "^22.8.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
